--- a/index.html
+++ b/index.html
@@ -4448,7 +4448,7 @@ var borlabsCookieCookies = {"essential":{"borlabs-cookie":{"cookieNameList":{"bo
                 <div class="elementor-button-wrapper"><a href="tour-buchen/index.html" rel="nofollow"
                                                          class="elementor-button-link elementor-button elementor-size-sm"
                                                          role="button"> <span class="elementor-button-content-wrapper"> <span
-                        class="elementor-button-text">Tour Buchen</span> </span> </a></div>
+                        class="elementor-button-text">Tour Buchen2</span> </span> </a></div>
             </div>
         </div>
     </div>
